@@ -3,7 +3,8 @@ tmpfs	/dev/shm	tmpfs	defaults	0 0
 tmpfs	/dev/mapper	tmpfs	defaults	0 0
 devpts	/dev/pts	devpts	defaults	0 0
 tmpfs	/var/lock	tmpfs	defaults	0 0
-tmpfs	/var/log	tmpfs	defaults	0 0
+#tmpfs	/var/log	tmpfs	defaults	0 0
+#tmpfs	/tmp		tmpfs	defaults	0 0
+# done by mountroot.sh
 tmpfs	/var/run	tmpfs	defaults	0 0
-tmpfs	/tmp		tmpfs	defaults	0 0
 sysfs	/sys		sysfs	defaults	0 0
